tests/NormalTests/paczka1/small_fuzzy/11474937.err
Error in line 1: uS7 S484 76,0
Error in line 6: zHN7ooblkF A389 44,2
Error in line 7: 0YuP S596 89,6
